  * Polish translations by Boguslaw Ciastek SQ5TB, thanks!
  * A Dutch manual has been added.
  * Updated gettext and automake version used.
  * Install a .desktop file.
  * Language files and manuals have been converted to UTF-8.
  * The send widget is now a multiline text widget which allows entry of more
    characters.
  * Fonts used for DX messages (top window) and other messages (bottom window)
    can now be changed through the preferences dialog.
  * Linespacing added to the chat window, which makes it better readable.

Changelog for version xdx (1.2)

  * Fixed compilation against GTK+ version 2.4.
  * Added spanish translations and manual by Baltasar Perez, EB8AKF. Thanks!
  * A new option added to the preferences dialog which allows showing/hiding
    of columns in the spots window.

Changelog for version xdx (1.1)
  * Correctly save preferences and history when selecting program->exit from
    the menu. This bug was reported by Wilbert Knol ZL2BSJ, thanks!
  * Set the cursor after the entry when recalling history of the command line.

Changelog for version xdx (1.0)

  * A preferences dialog has been added.
  * A URL in the chat window will now appear blue and underlined when your
    mouse is over it. Clicking on it will open the link in your preferred
    browser or mail program (see the preferences dialog).
  * Fixed saving of position, size of the main window and columnwidths.
  * Support for smileys (:) :-) :)) :-)) ;) ;-) :( :-( :(( :-(() 
    in the chatwindow.
  * Basic hamlib support. Double clicking on a dxspot will set your rig's
    frequency. Needs the rigctl binary from the hamlib distribution.
  * Autologin has been added. To use it, enter your callsign in the preferences
    dialog. You can also add a comma separated list of commands here, which 
    will be sent after login to the cluster.
  * Dxspots, wcy/wwv information, toall and wx information can be saved to
    independent files when activated from the preferences dialog.