@@ -1,3 +1,2 @@
 - highlights with menu for turning on/off
-- option to turn echo off
 - save position of the divider
