@@ -9,6 +9,7 @@ Changelog for version xdx (1.3)
   * Fonts used for DX messages (top window) and other messages (bottom window)
     can now be changed through the preferences dialog.
   * Linespacing added to the chat window, which makes it better readable.
+  * You can turn local echo off in the preferences dialog.
 
 Changelog for version xdx (1.2)
 
